--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,23 @@
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
-		android:label="@string/app_name"
+		android:label="Zoek Resultaten"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-		<activity android:name=".KapperInfo"
-			android:parentActivityName=".MainActivity"
+		<activity
+			android:name=".AfspraakMaken"
+			android:label="Plan een Afspraak"
+			android:parentActivityName=".KapperInfo" />
+		<activity
+			android:name=".AfspraakBeheren"
+			android:label="Afspraken Beheren"
+			android:parentActivityName=".AfspraakMaken" />
+		<activity
+			android:name=".KapperInfo"
 			android:label="Kapper Informatie"
-			/>
-		<activity android:name=".MainActivity">
+			android:parentActivityName=".ZoekResultaten" />
+		<activity android:name=".ZoekResultaten">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
