--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
 	<application
 		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
+		android:icon="@mipmap/ic_launcher_zoekeenkapper"
 		android:label="Zoekresultaten"
-		android:roundIcon="@mipmap/ic_launcher_round"
+		android:roundIcon="@mipmap/ic_launcher_round_zoekeenkapper"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 		<activity
